# chefbot-sim

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0cab5bc94741_add_order_model.py  3c28c6390144_scripts_migrate_sh.py  5c437d0ddc57_add_delivery_model.py  956b085d3bbb_add_user_model.py  da5a85a9388d_add_order_model.py  e9107e2e2891_add_subscription_model.py  f92750ad7e5d_add_recipe_model.py
app/: main.py
app/api/: main.py
app/api/v1/: api.py  exceptions.py  schemas.py
app/core/: __init__.py  config.py  db.py  exceptions.py  repository.py  scheduler.py
app/core/repositories/: __init__.py  delivery_repository.py  order_repository.py  recipe_repository.py  subscription_repository.py  user_repository.py
app/core/tasks/: __init__.py  delivery_generation.py  order_generation.py  recipe_generation.py  subscription_generation.py  user_generation.py
app/models/: __init__.py  base.py  delivery.py  order.py  recipe.py  subscription.py  user.py
app/schemas/: __init__.py  delivery.py  order.py  recipe.py  subscription.py  user.py
app/templates/: generation_settings.html
scripts/: migrate.sh
tests/: conftest.py
tests/api/: test_main.py
tests/core/: test_exceptions.py
tests/models/: test_delivery.py  test_order.py  test_recipe.py  test_subscription.py  test_user.py
tests/repositories/: __init__.py  test_user_repository.py
tests/schemas/: __init__.py  test_delivery.py  test_order.py  test_recipe.py  test_subscription.py  test_user.py
(+26 files in other folders)
